@@ -8,6 +8,9 @@ requires 'Mojolicious::Plugin::Piwik';
 requires 'Mojolicious::Plugin::StaticCache';
 requires 'Mojolicious::Plugin::GzipStatic';
 requires 'Mojolicious::Plugin::CSPHeader', '>= 0.03';
+#requires 'Mojolicious::Plugin::FiatTux::Helpers', '== 0.10', url => 'https://framagit.org/fiat-tux/mojolicious/fiat-tux/mojolicious-plugin-fiattux-helpers/-/archive/0.10/mojolicious-plugin-fiattux-helpers-0.10.tar.gz';
+#requires 'Mojolicious::Plugin::FiatTux::GrantAccess', '== 0.07', url => 'https://framagit.org/fiat-tux/mojolicious/fiat-tux/mojolicious-plugin-fiattux-grantaccess/-/archive/0.07/mojolicious-plugin-fiattux-grantaccess-0.07.tar.gz';
+#requires 'Mojolicious::Plugin::FiatTux::Themes', '== 0.02', url => 'https://framagit.org/fiat-tux/mojolicious/fiat-tux/mojolicious-plugin-fiattux-themes/-/archive/0.02/mojolicious-plugin-fiattux-themes-0.02.tar.gz';
 requires 'Minion';
 requires 'Locale::Maketext';
 requires 'Locale::Maketext::Extract';
